# social_media_sieve

./: .gitignore  Cargo.toml  README.md
database/: init.sql
sms/: Cargo.toml
src/: database.rs  lib.rs  main.rs  models.rs  schema.rs
vk_api/: Cargo.toml
vk_api/src/: lib.rs
